Make virtual-thread code compile on Java 17